--- a/second-day-task/src/app/globals.css
+++ b/second-day-task/src/app/globals.css
@@ -4,7 +4,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --myBorderColor: #e5e7eb;
-  --myNormalTextColor: black;
+  --myTextColorNormal: #4b5563;
 }
 
 @theme inline {
