--- a/second-day-task/src/app/globals.css
+++ b/second-day-task/src/app/globals.css
@@ -5,6 +5,7 @@
   --foreground: #171717;
   --myBorderColor: #e5e7eb;
   --myTextColorNormal: #4b5563;
+  --myTextColorBlue: #3b82f6;
   --myTextColorHeading: black;
 }
 
