--- a/second-day-task/src/app/globals.css
+++ b/second-day-task/src/app/globals.css
@@ -7,6 +7,7 @@
   --myTextColorNormal: #4b5563;
   --myTextColorBlue: #3b82f6;
   --myTextColorHeading: black;
+  --myTextColorLightGray: #9ca3af;
 }
 
 @theme inline {
