--- a/root/task-3 - component based/flowbite_html_project/src/output.css
+++ b/root/task-3 - component based/flowbite_html_project/src/output.css
@@ -5,6 +5,7 @@
   :root, :host {
     --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-red-50: #FEF2F2;
@@ -1559,17 +1560,35 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
+  .end-2 {
+    inset-inline-end: calc(var(--spacing) * 2);
+  }
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-2 {
+    top: calc(var(--spacing) * 2);
+  }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
+  .top-6 {
+    top: calc(var(--spacing) * 6);
+  }
   .top-\[80\%\] {
     top: 80%;
+  }
+  .top-\[636px\] {
+    top: 636px;
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
   .right-3 {
     right: calc(var(--spacing) * 3);
+  }
+  .right-\[32px\] {
+    right: 32px;
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -1579,6 +1598,9 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
+  }
+  .left-6 {
+    left: calc(var(--spacing) * 6);
   }
   .left-\[48px\] {
     left: 48px;
@@ -1637,8 +1659,17 @@
       max-width: 96rem;
     }
   }
+  .mx-\[50\%\] {
+    margin-inline: 50%;
+  }
   .mx-auto {
     margin-inline: auto;
+  }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
+  }
+  .mt-1 {
+    margin-top: calc(var(--spacing) * 1);
   }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
@@ -1651,6 +1682,9 @@
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
+  }
+  .mt-7 {
+    margin-top: calc(var(--spacing) * 7);
   }
   .mt-10 {
     margin-top: calc(var(--spacing) * 10);
@@ -2292,6 +2326,9 @@
       color: var(--color-gray-500) !important;
     }
   }
+  .\!mb-4 {
+    margin-bottom: calc(var(--spacing) * 4) !important;
+  }
   .-mb-px {
     margin-bottom: -1px;
   }
@@ -2301,11 +2338,20 @@
   .mb-2 {
     margin-bottom: calc(var(--spacing) * 2);
   }
+  .mb-3 {
+    margin-bottom: calc(var(--spacing) * 3);
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-10 {
+    margin-bottom: calc(var(--spacing) * 10);
   }
   .apexcharts-xaxistooltip {
     .apexcharts-canvas & {
@@ -2443,6 +2489,9 @@
     width: 32px;
     height: 32px;
   }
+  .h-3 {
+    height: calc(var(--spacing) * 3);
+  }
   .h-3\.5 {
     height: calc(var(--spacing) * 3.5);
   }
@@ -2458,6 +2507,12 @@
   .h-12 {
     height: calc(var(--spacing) * 12);
   }
+  .h-20 {
+    height: calc(var(--spacing) * 20);
+  }
+  .h-\[6px\] {
+    height: 6px;
+  }
   .h-\[20px\] {
     height: 20px;
   }
@@ -2466,6 +2521,9 @@
   }
   .h-\[40px\] {
     height: 40px;
+  }
+  .h-\[48px\] {
+    height: 48px;
   }
   .h-\[50\%\] {
     height: 50%;
@@ -2476,6 +2534,9 @@
   .h-\[312px\] {
     height: 312px;
   }
+  .h-\[412px\] {
+    height: 412px;
+  }
   .h-\[calc\(100\%-1rem\)\] {
     height: calc(100% - 1rem);
   }
@@ -2485,6 +2546,15 @@
   .h-full {
     height: 100%;
   }
+  .h-px {
+    height: 1px;
+  }
+  .h-screen {
+    height: 100vh;
+  }
+  .max-h-\[120px\] {
+    max-height: 120px;
+  }
   .max-h-\[312px\] {
     max-height: 312px;
   }
@@ -2493,6 +2563,9 @@
   }
   .max-h-full {
     max-height: 100%;
+  }
+  .min-h-\[138px\] {
+    min-height: 138px;
   }
   .min-h-\[168px\] {
     min-height: 168px;
@@ -2663,8 +2736,14 @@
       text-align: center;
     }
   }
+  .w-1 {
+    width: calc(var(--spacing) * 1);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
+  }
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
   .w-3\.5 {
     width: calc(var(--spacing) * 3.5);
@@ -2675,11 +2754,20 @@
   .w-5 {
     width: calc(var(--spacing) * 5);
   }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
   .w-12 {
     width: calc(var(--spacing) * 12);
   }
   .w-64 {
     width: calc(var(--spacing) * 64);
+  }
+  .w-\[6px\] {
+    width: 6px;
+  }
+  .w-\[20\%\] {
+    width: 20%;
   }
   .w-\[20px\] {
     width: 20px;
@@ -2693,11 +2781,17 @@
   .w-\[50\%\] {
     width: 50%;
   }
+  .w-\[51\.27px\] {
+    width: 51.27px;
+  }
   .w-\[80px\] {
     width: 80px;
   }
   .w-\[93px\] {
     width: 93px;
+  }
+  .w-\[100\%\] {
+    width: 100%;
   }
   .w-\[100px\] {
     width: 100px;
@@ -2705,8 +2799,17 @@
   .w-\[108px\] {
     width: 108px;
   }
+  .w-\[150px\] {
+    width: 150px;
+  }
+  .w-\[200px\] {
+    width: 200px;
+  }
   .w-\[208px\] {
     width: 208px;
+  }
+  .w-\[264px\] {
+    width: 264px;
   }
   .w-\[288px\] {
     width: 288px;
@@ -2717,8 +2820,14 @@
   .w-\[328px\] {
     width: 328px;
   }
+  .w-\[350px\] {
+    width: 350px;
+  }
   .w-\[352px\] {
     width: 352px;
+  }
+  .w-\[384px\] {
+    width: 384px;
   }
   .w-\[418px\] {
     width: 418px;
@@ -2744,6 +2853,15 @@
   .max-w-2xl {
     max-width: var(--container-2xl);
   }
+  .max-w-\[1\] {
+    max-width: 1;
+  }
+  .max-w-\[147px\] {
+    max-width: 147px;
+  }
+  .max-w-\[150px\] {
+    max-width: 150px;
+  }
   .max-w-\[312px\] {
     max-width: 312px;
   }
@@ -2762,6 +2880,9 @@
   .max-w-full {
     max-width: 100%;
   }
+  .max-w-md {
+    max-width: var(--container-md);
+  }
   .datatable-input {
     .datatable-wrapper .datatable-search & {
       color: var(--color-gray-900);
@@ -2885,6 +3006,9 @@
     .datatable-wrapper & .datatable-input:focus {
       border-color: var(--color-blue-600);
     }
+  }
+  .min-w-\[138px\] {
+    min-width: 138px;
   }
   .min-w-\[150px\] {
     min-width: 150px;
@@ -2898,8 +3022,14 @@
   .flex-shrink {
     flex-shrink: 1;
   }
+  .flex-grow {
+    flex-grow: 1;
+  }
   .grow {
     flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .-translate-x-full {
     --tw-translate-x: -100%;
@@ -2951,6 +3081,9 @@
   .list-disc {
     list-style-type: disc;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
   .grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
@@ -2959,6 +3092,9 @@
   }
   .flex-col {
     flex-direction: column;
+  }
+  .flex-row {
+    flex-direction: row;
   }
   .flex-wrap {
     flex-wrap: wrap;
@@ -2984,6 +3120,9 @@
   .justify-start {
     justify-content: flex-start;
   }
+  .justify-items-center {
+    justify-items: center;
+  }
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
@@ -2995,6 +3134,9 @@
   }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
@@ -3008,8 +3150,35 @@
   .gap-10 {
     gap: calc(var(--spacing) * 10);
   }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
+  .gap-14 {
+    gap: calc(var(--spacing) * 14);
+  }
+  .gap-81 {
+    gap: calc(var(--spacing) * 81);
+  }
+  .gap-\[2\%\] {
+    gap: 2%;
+  }
+  .gap-\[4\%\] {
+    gap: 4%;
+  }
+  .gap-\[5\%\] {
+    gap: 5%;
+  }
+  .gap-\[5\] {
+    gap: 5;
+  }
+  .gap-\[8\%\] {
+    gap: 8%;
+  }
+  .gap-\[10\%\] {
+    gap: 10%;
+  }
+  .gap-\[15\%\] {
+    gap: 15%;
+  }
+  .gap-\[20\%\] {
+    gap: 20%;
   }
   .gap-\[40px\] {
     gap: 40px;
@@ -3086,6 +3255,9 @@
   }
   .overflow-y-scroll {
     overflow-y: scroll;
+  }
+  .rounded {
+    border-radius: 0.25rem;
   }
   .rounded-\[4px\] {
     border-radius: 4px;
@@ -3522,6 +3694,9 @@
   .bg-\[\#960D0D\] {
     background-color: #960D0D;
   }
+  .bg-\[\#470001\] {
+    background-color: #470001;
+  }
   .bg-\[\#CFD8C1\] {
     background-color: #CFD8C1;
   }
@@ -3540,8 +3715,41 @@
   .bg-\[\#FFF3CB\] {
     background-color: #FFF3CB;
   }
+  .bg-\[\#e9d6d1\] {
+    background-color: #e9d6d1;
+  }
+  .bg-\[\#f8eee5\] {
+    background-color: #f8eee5;
+  }
+  .bg-\[blue\] {
+    background-color: blue;
+  }
+  .bg-\[green\] {
+    background-color: green;
+  }
+  .bg-\[lightblue\] {
+    background-color: lightblue;
+  }
+  .bg-\[lightgreen\] {
+    background-color: lightgreen;
+  }
+  .bg-\[orange\] {
+    background-color: orange;
+  }
+  .bg-\[pink\] {
+    background-color: pink;
+  }
+  .bg-\[purple\] {
+    background-color: purple;
+  }
+  .bg-\[red\] {
+    background-color: red;
+  }
   .bg-\[white\] {
     background-color: white;
+  }
+  .bg-\[yellow\] {
+    background-color: yellow;
   }
   .bg-black {
     background-color: var(--color-black);
@@ -3554,6 +3762,12 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-gray-300 {
+    background-color: var(--color-gray-300);
+  }
+  .bg-gray-900 {
+    background-color: var(--color-gray-900);
   }
   .bg-gray-900\/50 {
     background-color: color-mix(in srgb, #111827 50%, transparent);
@@ -3659,6 +3873,30 @@
       fill: white !important;
     }
   }
+  .apexcharts-gridline {
+    stroke: var(--color-gray-200) !important;
+    .dark & {
+      stroke: var(--color-gray-700) !important;
+    }
+  }
+  .apexcharts-gridline {
+    stroke: var(--color-gray-200) !important;
+    .dark & {
+      stroke: var(--color-gray-700) !important;
+    }
+  }
+  .apexcharts-xcrosshairs {
+    stroke: var(--color-gray-200) !important;
+    .dark & {
+      stroke: var(--color-gray-700) !important;
+    }
+  }
+  .apexcharts-xcrosshairs {
+    stroke: var(--color-gray-200) !important;
+    .dark & {
+      stroke: var(--color-gray-700) !important;
+    }
+  }
   .apexcharts-ycrosshairs {
     stroke: var(--color-gray-200) !important;
     .dark & {
@@ -3673,6 +3911,9 @@
   }
   .object-contain {
     object-fit: contain;
+  }
+  .object-cover {
+    object-fit: cover;
   }
   .apexcharts-legend {
     .apexcharts-canvas & {
@@ -3718,6 +3959,15 @@
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
+  .p-8 {
+    padding: calc(var(--spacing) * 8);
+  }
+  .\!px-4 {
+    padding-inline: calc(var(--spacing) * 4) !important;
+  }
+  .px-1 {
+    padding-inline: calc(var(--spacing) * 1);
+  }
   .px-1\.5 {
     padding-inline: calc(var(--spacing) * 1.5);
   }
@@ -3744,6 +3994,12 @@
   }
   .px-\[24px\] {
     padding-inline: 24px;
+  }
+  .\!py-2 {
+    padding-block: calc(var(--spacing) * 2) !important;
+  }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -3786,6 +4042,12 @@
   }
   .pt-2 {
     padding-top: calc(var(--spacing) * 2);
+  }
+  .pt-6 {
+    padding-top: calc(var(--spacing) * 6);
+  }
+  .pt-54 {
+    padding-top: calc(var(--spacing) * 54);
   }
   .pt-\[16px\] {
     padding-top: 16px;
@@ -3843,6 +4105,9 @@
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
   }
+  .pb-4 {
+    padding-bottom: calc(var(--spacing) * 4);
+  }
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
   }
@@ -3870,6 +4135,12 @@
   }
   .text-left {
     text-align: left;
+  }
+  .text-right {
+    text-align: right;
+  }
+  .font-serif {
+    font-family: var(--font-serif);
   }
   .text-base {
     font-size: var(--text-base);
@@ -4013,6 +4284,12 @@
   .text-\[20px\] {
     font-size: 20px;
   }
+  .text-\[30px\] {
+    font-size: 30px;
+  }
+  .text-\[34px\] {
+    font-size: 34px;
+  }
   .text-\[40px\] {
     font-size: 40px;
   }
@@ -4032,6 +4309,10 @@
     --tw-leading: 140%;
     line-height: 140%;
   }
+  .leading-\[142\%\] {
+    --tw-leading: 142%;
+    line-height: 142%;
+  }
   .leading-\[146\%\] {
     --tw-leading: 146%;
     line-height: 146%;
@@ -4039,6 +4320,10 @@
   .leading-\[150\%\] {
     --tw-leading: 150%;
     line-height: 150%;
+  }
+  .leading-\[158\%\] {
+    --tw-leading: 158%;
+    line-height: 158%;
   }
   .leading-relaxed {
     --tw-leading: var(--leading-relaxed);
@@ -4068,11 +4353,18 @@
     --tw-tracking: 15%;
     letter-spacing: 15%;
   }
+  .tracking-wider {
+    --tw-tracking: var(--tracking-wider);
+    letter-spacing: var(--tracking-wider);
+  }
   .text-balance {
     text-wrap: balance;
   }
   .text-nowrap {
     text-wrap: nowrap;
+  }
+  .text-wrap {
+    text-wrap: wrap;
   }
   .whitespace-nowrap {
     white-space: nowrap;
@@ -4170,6 +4462,9 @@
   .text-\[\#878F7A\] {
     color: #878F7A;
   }
+  .text-\[\#960D0D\] {
+    color: #960D0D;
+  }
   .text-\[\#454545\] {
     color: #454545;
   }
@@ -4179,6 +4474,9 @@
   .text-\[\#737373\] {
     color: #737373;
   }
+  .text-\[\#999999\] {
+    color: #999999;
+  }
   .text-\[\#C89D00\] {
     color: #C89D00;
   }
@@ -4187,6 +4485,12 @@
   }
   .text-\[\#E8E8E8\] {
     color: #E8E8E8;
+  }
+  .text-\[\#FFE2E1B2\] {
+    color: #FFE2E1B2;
+  }
+  .text-\[\#FFE2E1\] {
+    color: #FFE2E1;
   }
   .text-black {
     color: var(--color-black);
@@ -4200,17 +4504,29 @@
   .text-gray-500 {
     color: var(--color-gray-500);
   }
+  .text-gray-700 {
+    color: var(--color-gray-700);
+  }
   .text-gray-800 {
     color: var(--color-gray-800);
   }
   .text-gray-900 {
     color: var(--color-gray-900);
   }
+  .text-red-700 {
+    color: var(--color-red-700);
+  }
   .text-white {
     color: var(--color-white);
   }
   .uppercase {
     text-transform: uppercase;
+  }
+  .italic {
+    font-style: italic;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .opacity-0 {
     opacity: 0%;
@@ -4334,6 +4650,13 @@
       }
     }
   }
+  .hover\:bg-red-800 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-red-800);
+      }
+    }
+  }
   .hover\:bg-white {
     &:hover {
       @media (hover: hover) {
@@ -4355,6 +4678,13 @@
       }
     }
   }
+  .hover\:text-gray-700 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-gray-700);
+      }
+    }
+  }
   .hover\:text-gray-900 {
     &:hover {
       @media (hover: hover) {
@@ -4366,6 +4696,13 @@
     &:hover {
       @media (hover: hover) {
         color: var(--color-white);
+      }
+    }
+  }
+  .hover\:underline {
+    &:hover {
+      @media (hover: hover) {
+        text-decoration-line: underline;
       }
     }
   }
@@ -4394,6 +4731,11 @@
   .focus\:ring-gray-200 {
     &:focus {
       --tw-ring-color: var(--color-gray-200);
+    }
+  }
+  .focus\:ring-red-300 {
+    &:focus {
+      --tw-ring-color: var(--color-red-300);
     }
   }
   .focus\:outline-none {
@@ -4427,6 +4769,11 @@
       margin-top: calc(var(--spacing) * 0);
     }
   }
+  .w825\:mt-12 {
+    @media (width >= 825px) {
+      margin-top: calc(var(--spacing) * 12);
+    }
+  }
   .w825\:mt-18 {
     @media (width >= 825px) {
       margin-top: calc(var(--spacing) * 18);
@@ -4445,6 +4792,11 @@
   .w825\:hidden {
     @media (width >= 825px) {
       display: none;
+    }
+  }
+  .w825\:h-\[312px\] {
+    @media (width >= 825px) {
+      height: 312px;
     }
   }
   .w825\:w-fit {
@@ -4472,9 +4824,19 @@
       gap: calc(var(--spacing) * 2);
     }
   }
+  .w825\:gap-4 {
+    @media (width >= 825px) {
+      gap: calc(var(--spacing) * 4);
+    }
+  }
   .w825\:gap-12 {
     @media (width >= 825px) {
       gap: calc(var(--spacing) * 12);
+    }
+  }
+  .w825\:px-6 {
+    @media (width >= 825px) {
+      padding-inline: calc(var(--spacing) * 6);
     }
   }
   .w825\:px-12 {
@@ -4487,14 +4849,39 @@
       padding-inline: 16px;
     }
   }
+  .w825\:py-4 {
+    @media (width >= 825px) {
+      padding-block: calc(var(--spacing) * 4);
+    }
+  }
   .w1000\:block {
     @media (width >= 1000px) {
       display: block;
     }
   }
+  .w1000\:h-\[312px\] {
+    @media (width >= 1000px) {
+      height: 312px;
+    }
+  }
+  .w1000\:flex-col {
+    @media (width >= 1000px) {
+      flex-direction: column;
+    }
+  }
+  .w1000\:flex-row {
+    @media (width >= 1000px) {
+      flex-direction: row;
+    }
+  }
   .w1000\:gap-8 {
     @media (width >= 1000px) {
       gap: calc(var(--spacing) * 8);
+    }
+  }
+  .w1000\:gap-12 {
+    @media (width >= 1000px) {
+      gap: calc(var(--spacing) * 12);
     }
   }
   .w1140\:gap-12 {
@@ -4522,9 +4909,129 @@
       width: 500px;
     }
   }
+  .md\:grid-cols-2 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .lg\:absolute {
+    @media (width >= 64rem) {
+      position: absolute;
+    }
+  }
+  .lg\:mt-0 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:mt-12 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:mt-18 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 18);
+    }
+  }
+  .lg\:mb-6 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:mb-8 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:block {
+    @media (width >= 64rem) {
+      display: block;
+    }
+  }
+  .lg\:h-\[312px\] {
+    @media (width >= 64rem) {
+      height: 312px;
+    }
+  }
+  .lg\:w-\[312\] {
+    @media (width >= 64rem) {
+      width: 312;
+    }
+  }
+  .lg\:w-\[312px\] {
+    @media (width >= 64rem) {
+      width: 312px;
+    }
+  }
   .lg\:w-\[750px\] {
     @media (width >= 64rem) {
       width: 750px;
+    }
+  }
+  .lg\:w-fit {
+    @media (width >= 64rem) {
+      width: fit-content;
+    }
+  }
+  .lg\:w-full {
+    @media (width >= 64rem) {
+      width: 100%;
+    }
+  }
+  .lg\:flex-col {
+    @media (width >= 64rem) {
+      flex-direction: column;
+    }
+  }
+  .lg\:flex-row {
+    @media (width >= 64rem) {
+      flex-direction: row;
+    }
+  }
+  .lg\:justify-between {
+    @media (width >= 64rem) {
+      justify-content: space-between;
+    }
+  }
+  .lg\:gap-0 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:gap-2 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 2);
+    }
+  }
+  .lg\:gap-8 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 8);
+    }
+  }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:gap-12 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:px-4 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:px-12 {
+    @media (width >= 64rem) {
+      padding-inline: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:pt-0 {
+    @media (width >= 64rem) {
+      padding-top: calc(var(--spacing) * 0);
     }
   }
   .rtl\:rotate-180 {
